--- a/DataStructure(JS)/数据结构.md
+++ b/DataStructure(JS)/数据结构.md
@@ -245,4 +245,332 @@
   }
   ```
   
+
+
+
+## 哈希表
+
+- 冲突解决方案
+
+  - 链地址法
+
+  - 开放地址法
+
+    1. 线性探测
+
+       > 删除元素时该值不能设置为null，应进行特殊处理，如设置为-1
+       >
+       > 线性探测为造成聚集
+
+    2. 二次探测：探测的步长为$x+1^2,x+2^2,x+3^2……$
+
+       > 二次探测会造成步长不一的聚集
+
+    3. 再哈希法
+
+       > 哈希函数：$stepSize=constant-(key\mod {constant})$，constant为质数，且小于数组的容量
+       >
+       > 第二次哈希化需要满足两个条件：
+       >
+       > 1. 和第一个哈希函数不同
+       > 2. 不能输出为0，否则算法进入死循环
+
+- 哈希表的效率：装填因子
+
+  - 装填因子：当前哈希表中已经包含的数据项和哈希表的长度之比
+  - 当装填因子>0.75需要对哈希表进行扩容，<0.25时需要缩减哈希表
+
+- 哈希函数的优点：
+
+  - 快速计算：霍纳法则
+  - 均匀分布：质数
+
+- 哈希表的实现（线性探测）
+
+  ```js
+  class HashMap {
+    constructor(size) {
+      this.table = []
+      for(let i = 0; i < size; i++) {
+        this.table.push([undefined, 0])
+      }
+      this.size = 0
+    }
+      
+    //哈希函数
+    hashFunc(index) {
+      let keyCode = 0
+      for(let item of index) {
+        keyCode += item.charCodeAt(0)
+      }
+      let key = keyCode % this.table.length
+      return key
+    }
+      
+    // 插入或修改数据(线性探测)
+    set(index, value) {
+      let key = this.hashFunc(index)
+      while((this.table[key])[0] !== undefined && (this.table[key])[0] !== index) {
+        key++
+        if(key >= this.table.length) {
+          throw new Error('已经没有可用空间')
+        }
+      }
+        if ((this.table[key])[0] !== index) {
+          this.size++
+          this.table[key].push(index,value)
+        } else {
+            this.table[key][1] = value
+        }
+    }
+      
+    //get方法，用来从哈希表中取值
+    get(index) {
+      let key = this.hashFunc(index)
+      while((this.table[key])[0] !== undefined && (this.table[key])[0] !== index) {
+        key++
+        if(key >= this.table.length) {
+          return undefined
+        }
+      }
+        return (this.table[key])[1]
+    }
+      
+    //delete方法，用来删除哈希表的数据
+    delete(index) {
+      let key = this.hashFunc(index)
+      while((this.table[key])[0] !== undefined && (this.table[key])[0] !== index) {
+        key ++
+        if(key >= this.table.length) {
+          return false
+        }
+      }
+      this.table[key] = new Array(2)
+      this.size--
+      return true
+    }
+      
+    //has方法，判断哈希表中有没有该值
+    has(index) {
+      let key = this.hashFunc(index)
+      while((this.table[key])[0] !== undefined && (this.table[key])[0] !== index) {
+        key ++
+        if(key >= this.table.length) {
+          return false
+        }
+      }
+      if((this.table[key])[0] !== undefined) {
+        return true
+      } else {
+        return false
+      }
+    }
+      
+    //展示存储到哈希表中的所有数据
+    showAllData() {
+      let result = []
+      for (let item of this.table) {
+        if(item[0] !== undefined) {
+          result.push(item)
+        }
+      }
+      return result
+    }
+  }
+  ```
+
+- 哈希表的实现（链地址法）
+
+  ```js
+  class HashTable {
+      // 初始化哈希表
+      constructor(size) {
+          // 存储数据，最后数据格式应该是 [[[key,value],[key,value]]],这里采用的是数组形式
+          this.storage = [];
+          // 初始化数组长度，尽量取质数，容量不够时，需要扩容
+          this.size = size;
+          // loadFactor = this.count / this.size 如果超过0.75，则需要扩容
+          this.count = 0;
+      }
   
+      // 创建hash函数，根据霍纳算法取模
+      hashFunc(value) {
+          const H = 37; // 质数
+          let hashCode = 0
+          // 采用霍纳算法求出index
+          for (let i = 0; i < value.length; i++) {
+              hashCode = H * hashCode + i.charCodeAt(i)
+          }
+          return hashCode % this.size
+      }
+  
+      // 插入和修改数据
+      // 1. 如果this.storage[index] === undefined ,则需要创建 this.storage[index] = [[]]
+      // 2. this.storage[index] = [[key, value]] ,遍历，有key则更新值，无key则push添加上
+      put = (key, value) => {
+          const index = this.hashFunc(key);
+          // 判断是否存在 this.storage[index] = [[]]， 这里称为basket，有没有篮子存放对应存放key，value
+          if (this.storage[index] === undefined) {
+              this.storage[index] = []
+          }
+          // 遍历basket里面的数组数据
+          const basket = this.storage[index]
+          if (basket.length) {
+              for (let i = 0; i < basket.length; i++) {
+                  const tuple = basket[i]
+                  // 若key对应，则直接修改数据，跳出
+                  if (tuple[0] === key) {
+                      tuple[1] = value;
+                      return
+                  }
+              }
+          }
+          // 若找不到key，则直接添加在数组后面
+          basket.push([key, value])
+          this.count++;
+  
+          // 当装填因子 >= 0.75，则需要扩容
+          if (this.count >= this.size * 0.75) {
+              // 找出最小的质数
+              const newSize = smallerPrime(this.size * 2)
+              this.resize(newSize)
+          }
+  
+      }
+  
+      // get 获取对应的value
+      /*
+       * 1 根据hashFunc，获取出key对应的index
+       * 2 找到storage[index],为undefined，则直接返回null，否则，获取出对应数据bucket
+       * 3 遍历对应的bucket，拿到value，否则返回null
+       */
+      get = (key) => {
+          const index = this.hashFunc(key);
+          const bucket = this.storage[index]
+          if (bucket === undefined) {
+              return null
+          }
+          let res = null;
+          for (let i = 0; i < bucket.length; i++) {
+              if (bucket[i][0] === key) {
+                  res = bucket[i][1]
+                  break;
+              }
+          }
+          return res;
+  
+      }
+  
+      /**
+       * 删除操作
+       * 根据hashFunc，获取出key对应的index
+       * 找到storage[index],为undefined，则直接返回null，否则，获取出对应数据bucket
+       * 遍历对应的bucket，若bucket[i][0] === key,则调用splice，否则返回null
+       */
+      delete = (key) => {
+          const index = this.hashFunc(key);
+          const bucket = this.storage[index];
+          let res = null
+          if (bucket === undefined) {
+              return null
+          }
+          for (let i = 0; i < bucket.length; i++) {
+              const tuple = bucket[i];
+              if (tuple[0] === key) {
+                  bucket.splice(i, 1)
+                  this.count--;
+                  res = tuple[1]
+                  // 假设初始数组长度为7
+                  if (this.size > 7 && this.count < this.size * 0.25) {
+                      const num = smallerPrime(Math.floor(this.size / 2));
+                      this.resize(num)
+                  }
+              }
+          }
+          return res
+      }
+  
+      // isEmpty 是否为空
+      isEmpty = () => {
+          return this.count === 0
+      }
+  
+      // size 长度
+      length = () => {
+          return this.count
+      }
+  
+      /**
+       * 扩容，当添加元素时，loadFactor（装载因子）> 0.75时，需要扩容
+       * 缩容，当删除元素时，loadFactor（装载因子）< 0.25 && this.size > 初始数组长度时，需要缩容
+       * 当需要执行扩容后，哈希表中storage数组中的元素需要重新存放
+       * 因为这时候的size不一样，取模后的索引也就不一样了，需要将旧的数组重新放入到新的数组中
+       */
+      resize = (limit) => {
+          const oldStore = this.storage;
+          // 重置storage，count，size
+          this.storage = [];
+          this.count = 0;
+          this.size = limit;
+          // 将原有的数据重新添加到store中
+          for (let i = 0; i < oldStore.length; i++) {
+              const basket = oldStore[i]
+              if (basket === undefined) {
+                  continue
+              }
+              for (let i = 0; i < basket.length; i++) {
+                  const tuple = basket[i]
+                  this.put(tuple[0], tuple[1])
+              }
+          }
+      }
+  
+      /**
+       * 找出扩容2倍后距离最近的质数，保证质数是避免模数相同的数之间具备公共因数
+       */
+      // 判断是不是质数
+      isPrime(num) {
+          // 开根号
+          const sqr = parseInt(Math.sqrt(num))
+          for (let i = 2; i <= sqr; i++) {
+              if (num % i === 0) {
+                  return false
+              }
+          }
+          return true
+      }
+      // 求出相邻最小的质数
+      smallerPrime(num) {
+          while (!isPrime(num)) {
+              num++
+          }
+          return num;
+      }
+  }
+  ```
+
+
+
+## 树
+
+- 二叉树特性
+  - 一个二叉树第 i 层的最大结点数为：$2^{i-1}, i >= 1$
+  - 深度为k的二叉树有最大结点总数为： $2^k - 1, k >= 1$
+  - 对任何非空二叉树 T，若$n_0$表示叶结点的个数、$n_2$是度为2的非叶结点个数，那么两者满足关系$n_0 = n_2 + 1$
+- 二叉搜索树（BST，Binary Search Tree），二叉搜索树是一颗二叉树, 可以为空；如果不为空，满足以下性质：
+  - 非空左子树的所有键值小于其根结点的键值
+  - 非空右子树的所有键值大于其根结点的键值
+  - 左、右子树本身也都是二叉搜索树
+- 二叉搜索树的特点
+  - 相对较小的值总是保存在左结点上
+  - 相对较大的值总是保存在右结点上
+  - 查找效率非常高
+- 重建二叉树条件：
+  - 已知中序遍历与前序遍历
+  - 已知中序遍历与后序遍历
+- 二叉搜索树的缺陷：
+  - 极端情况下，二叉搜索树会退化成链表结构，如插入连续的有序数据
+- 树的平衡性：以较快的速度即$O(log_2N)$操作树，即保持树总是平衡的，让左右结点的子孙结点的个数尽量相等
+  - AVL树
+  - 红黑树
+
