--- a/DataStructure(JS)/数据结构.md
+++ b/DataStructure(JS)/数据结构.md
@@ -573,4 +573,39 @@
 - 树的平衡性：以较快的速度即$O(log_2N)$操作树，即保持树总是平衡的，让左右结点的子孙结点的个数尽量相等
   - AVL树
   - 红黑树
+- 红黑树规则
+  1. 节点是红色或黑色
+  2. 根节点是黑色
+  3. 每个叶子节点都是黑色的空节点（NIL节点）
+  4. 每个红色节点的两个子节点都是黑色（从每个叶子到根的所有路径上不能有两个连续的红色节点）
+  5. 从任一节点到其每个叶子的所有路径都包含相同数目的黑色节点
+- 红黑树的关键特性：从根到叶子的最长可能路径，不会超过最短可能路径的两倍长，即树基本平衡
+- 红黑树的变换
+  - 变色
+    - 为了重新符合红黑树的规则，可能需要将红色节点变为黑色，或将黑色节点变为红色
+    - 插入的新节点通常为红色节点，因为插入红色节点时可能插入一次不违反红黑树任何规则
+  - 左旋转
+    - 逆时针旋转红黑树的两个节点，使得父节点被自己的右孩子取代，并成为自己的左孩子
+  - 右旋转
+    - 顺时针旋转红黑树的两个节点，使得父节点被自己的左孩子取代，并成为自己的右孩子
+- 红黑树的插入操作
+  - 情况一：新节点N位于树的根上，没有父节点
+    - 这种情况下，我们直接将红色变换成黑色即可，这样满足性质2
+  - 情况二：新节点的父节点P是黑色
+    - 性质4没有失效（新节点是红色的），性质5也没有任何问题，尽管新节点N有两个黑色的叶子节点nil，但是心节点N是红色的，所以通过它的路径中黑色节点的个数依然相同满足性质5
+  - 情况三：P为红色，U也是红色
+    - 父红叔红祖黑，则变换为父黑叔黑祖红
+    - 将P和U变换为黑色，并且将G变换为红色
+    - 现在新节点N有了一个黑色的父节点P,所以每条路径上黑色节点的数目没有改变
+    - 而从更高的路径上，必然都会经过G节点所以那些路径的黑色节点数目也是不变的.符合性质5
+  - 情况四：N的叔叔节点U是黑节点且N是左孩子
+    - 父红叔黑祖黑并且N是左儿子，则变换为父黑祖红并且右旋转
+    - 对祖父节点G进行依次右旋转
+    - 在旋转查收的树中，以前的父节点P现在是新节点已经以前祖父节点G的父节点
+    - 交换以前的父节点P和祖父节点G的颜色
+    - B节点向右平移，称为G节点的左子节点
+  - 情况五：N的叔叔U是黑色节点且N是有孩子
+    - 父红叔黑祖黑N是右儿子，则以P为根，左旋转（将P作为新插入的红色节点考虑即可），再将自己变成黑色，祖变成红色，进行以祖为根，进行右旋转
+    - 对P节点进行依次左旋转，形成情况四的结果
+    - 对祖父节点G进行一 次右旋转，并且改变颜色即可
 
