--- a/DataStructure(JS)/数据结构.md
+++ b/DataStructure(JS)/数据结构.md
@@ -1,3 +1,5 @@
+[JavaScript数据结构与算法](https://www.zhihu.com/column/c_1208759212668518400)
+
 ## 栈
 
 - 创建栈类
@@ -608,4 +610,25 @@
     - 父红叔黑祖黑N是右儿子，则以P为根，左旋转（将P作为新插入的红色节点考虑即可），再将自己变成黑色，祖变成红色，进行以祖为根，进行右旋转
     - 对P节点进行依次左旋转，形成情况四的结果
     - 对祖父节点G进行一 次右旋转，并且改变颜色即可
+
+## 图
+
+- 最小生成树
+  - 最小生成树的边数总是比其顶点数少一个
+  - 最小生成树可能不是唯一的，但是不同的最小生成树的权值之和总是相同的
+- 最短路径：Dijkstra算法
+  - 求带权有向图中某个源点到其余各顶点的最短路径，最常用的是Dijkstra算法。该算法设置一个集合S（可用数组实现）用来记录已求得的最短路径的顶点。该集合初始时将源点放入其中，此后每求出源点到某个顶点的最短路径，就将该顶点放入集合中来，除此之外，实现该算法时用到了两个辅助数组：
+    - dist：记录了从源点到其他各顶点当前的最短路径长度
+    - path：表示从源点到顶点 i 之间的最短路径
+  - 假设从顶点0出发，集合S最初只包含顶点0，邻接矩阵arcs表示带权有向图， arcs[i][j]表示有向边<i, j>的权值，如果不存在有向边<i, j>，则arcs[i][j]记为无穷大，那么算法的步骤如下：
+    1. 集合S初始时为{V0}，dist的初始值dist[i] = arcs[0][i]，i 表示顶点Vi。0表示顶点V0
+    2. 从顶点集合V-S中选出一个顶点，假设为Vj，其满足dist[j] = Min {dist[i] | Vi∈V-S}，Vj就是当前求得的V0到Vj的最短路径的终点，并令S = S ∪ { Vj }
+    3. 修改从V0出发到集合V-S上任意一个顶点Vk可到达的最短路径，V0初始时可能并不能直接到达顶点Vk，这时可以通过顶点 Vj 作为中转看看是否能够到达，或者通过Vj作为中转后到达的路径权值之后小于之前已有的数值，那么就可以做出一些修改了：如果dist[j] + arcs[j][k] < dist[k]，则令dist[k] = dist[j] + arcs[j][k]
+    4. 重复步骤2和3，直到所有的顶点都包含在集合S中。
+
+
+
+
+
+
 
